log
Wed 10 May 2023 03:44:54 PM UTC: 
 heap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|4
total_score: 0/70
0b94e95
Wed 10 May 2023 03:45:03 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
17454cc
Wed 10 May 2023 03:47:34 PM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
56f51e1
Wed 10 May 2023 03:56:43 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:24:26: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   24 |   return pq->heapArray[0]->data;
      |                          ^~
heap.c:25:1: error: control reaches end of non-void function [-Werror=return-type]
   25 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
b015724
Wed 10 May 2023 04:01:00 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|2
total_score: 20/70
d060e19
Thu 11 May 2023 03:51:53 PM UTC: 
 heap.c | 36 ++++++++++++++++++++++++++++++++++++
 1 file changed, 36 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:56:19: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘priority’
   56 |       int aux = pq->priority[(indice-1)/2];
      |                   ^~
heap.c:57:9: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘priority’
   57 |       pq->priority[(indice-1)/2] = pq->priorities[indice];
      |         ^~
heap.c:57:38: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘priorities’
   57 |       pq->priority[(indice-1)/2] = pq->priorities[indice];
      |                                      ^~
heap.c:58:9: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘priorities’
   58 |       pq->priorities[indice] = aux;
      |         ^~
Compilation failed
5986d68
Thu 11 May 2023 03:53:41 PM UTC: 
 heap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  2|2
total_score: 20/70
771b68d
Thu 11 May 2023 03:54:36 PM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
c898b05
Thu 11 May 2023 04:12:47 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
da465d4
Thu 11 May 2023 04:13:32 PM UTC: 
 heap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 35/70
022116c
Thu 11 May 2023 04:14:56 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
102189a
Thu 11 May 2023 04:19:05 PM UTC: 
 heap.c | 20 +++++++++++++++++---
 1 file changed, 17 insertions(+), 3 deletions(-)
 tests:  7|1
total_score: 45/70
4e30199
Thu 11 May 2023 04:30:36 PM UTC: 
 heap.c | 17 ++++++++++++++---
 1 file changed, 14 insertions(+), 3 deletions(-)
 tests:  7|1
total_score: 45/70
e7e9e7a
Thu 11 May 2023 04:32:20 PM UTC: 
 heap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  7|1
total_score: 45/70
326f5a9
